# evms

./: .gitignore  CITATION.cff  README.md  environment.local.yml  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_bootstrap.py  streamlit_ui.py
.streamlit/: config.toml  secrets.toml.example
pages/: 0_Inversion_Workspace.py  1_How_EVMS_Works.py  2_Credits.py
src/evms/: __init__.py  calibration.py  forward.py  fractures.py  grid.py  inversion.py  io.py  metrics.py  regularization.py
tests/: test_calibration.py  test_forward.py  test_fractures.py  test_grid.py  test_inversion.py  test_io.py  test_metrics.py  test_regularization.py
