[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evms"
version = "0.1.1"
description = "Volumetric inversion of geological radioactivity from surface gamma measurements"
authors = [{name = "Maxime SOARES CORREIA"}]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "streamlit",
    "pytest",
    "trimesh",
    "plotly",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
